# dev-papers

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yml
dp-core/: Cargo.toml
dp-core/src/: lib.rs
dp-core/src/v1/: api.rs  generic.rs  mod.rs  project.rs  user.rs
dp-core/src/v1/endpoint/: auth.rs  mod.rs  projects.rs  user.rs
dp-web-core/: Cargo.toml
dp-web-core/src/: config.rs  lib.rs
dp-web-core/src/routes/: mod.rs
dp-web-core/src/routes/v1/: api.rs  auth.rs  mod.rs  projects.rs  users.rs
dp-web-core/src/routes/v1/models/: generic.rs  project.rs  user.rs
dp-web-server/: Cargo.toml
dp-web-server/src/: main.rs
src/: main.rs
src/migrations/: 0001-initial.sql  sqlite-1.sql
src/routes/v1/: api.rs  mod.rs  papers.rs  projects.rs
src/routes/v1/models/: mod.rs  project.rs
