[package]
name = "dev-papers"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4.11", features = ["derive"] }
rand = "0.8"
bitflags = "2.4.2"
serde_yaml = "0.9.32"
regex = "1.10.3"
once_cell = "1.19.0"
