[package]
name = "dp-web-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
bitflags = "2.4"
serde_yaml = "0.9"
regex = "1.10"
once_cell = "1.19"

dp-core = { path = "../dp-core" }
